main page add listview

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+.idea/
+
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+
 # Compiled class file
 *.class
 
